# maf-multi-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  skills-lock.json  supervisord.conf
agents/: coder.yaml  coder_data.yaml  data_analyst.yaml  hotels.yaml  operations.yaml  websearch.yaml
backend/: pyproject.toml  test.py
backend/agents/: coder_data.yaml  data_analyst.yaml  operations.yaml  websearch.yaml
backend/src/: agent_loader.py  api.py  config.py  events.py  fabric_mcp_client.py  file_store.py  foundry_agents_setup.py  foundry_client.py  graph_mail_client.py  history_store.py  main.py  observability.py  orchestrator.py  post_run_actions.py  run_store.py  summary.py
backend/src/scratchpad/: dispatcher.py  facilitator_tools.py  mail_tools.py  shared_document.py  specialist_tools.py  taskboard.py  workflow.py
backend/src/templates/: facilitator_prompt.jinja2
backend/tests/: __init__.py  test_agent_loader.py  test_api.py  test_config.py  test_facilitator_tools.py  test_file_store.py  test_foundry_client.py  test_orchestrator.py  test_specialist_tools.py
deploy/: add_user.sh  deploy.sh  post_infra_deploy.sh
docs/: PRD-agents-scratchpad-pattern.md  PRD-maf-foundry-multi-agent.md  PRD-persistent-history.md  PRD-post-run-actions.md  PRD-usage-dashboard.md  PRD-vnet-integration.md  event-streaming-analysis.md  maf-orch-idea.md  user-setup.md
frontend/: index.html  next.config.ts  package-lock.json  package.json  vitest.config.ts
src/: __init__.py  agent_loader.py  api.py  config.py  events.py  fabric_capacity.py  fabric_mcp_client.py  file_store.py  foundry_agents_setup.py  foundry_client.py  main.py  observability.py  orchestrator.py  summary.py
tests/: output.txt  test_agent_loader.py  test_facilitator_tools.py  test_foundry_client.py  test_orchestrator.py  test_shared_document.py  test_specialist_tools.py  test_taskboard.py
(+74 files in other folders)
